design: 피드 텍스트 변경

--- a/client/styles/reset.scss
+++ b/client/styles/reset.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
+
 html,
 body,
 div,
@@ -88,7 +91,7 @@ video {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  font-family: 'Pretendard Variable', Pretendard, -apple-system,
+  font-family: 'Poppins', 'Pretendard Variable', Pretendard, -apple-system,
   BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI',
   'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji',
   'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
