--- a/client/styles/reset.scss
+++ b/client/styles/reset.scss
@@ -91,7 +91,7 @@ video {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  font-family: 'Poppins', 'Pretendard Variable', Pretendard, -apple-system,
+  font-family: Pretendard, 'Pretendard Variable', 'Poppins' , -apple-system,
   BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI',
   'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', 'Apple Color Emoji',
   'Segoe UI Emoji', 'Segoe UI Symbol', sans-serif;
